# guile-sparql

./: Makefile.am  README  configure.ac  env.in  example.scm  guix.scm
build-aux/: guile.am
doc/: guile-sparql.texi  version.texi
sparql/: driver.scm  lang.scm  md5.scm  util.scm
tests/: runner.scm  test-lang.scm
